--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "logistics-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "nodemon ."
+    "build": "tsc",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' ."
   },
   "author": "",
   "license": "",
@@ -29,6 +31,8 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.14.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
