--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: contains(github.event.head_commit.message, '[deploy]') # Optional: filter by commit message
     steps:
       - name: Set environment variables
